fix: focus rings not showing for date selector and data header for accessibility

--- a/dashboard/app/components/stats/DateSelector.module.css
+++ b/dashboard/app/components/stats/DateSelector.module.css
@@ -10,6 +10,10 @@
 	&:hover {
 		background-color: var(--me-color-bg-grey-blue-dark);
 	}
+
+	&:focus-visible {
+		outline: 2px solid var(--mantine-color-blue-outline);
+	}
 }
 
 .targetWrapper {
